Thêm script deploy

--- a/core/templates/includes/footer.html
+++ b/core/templates/includes/footer.html
@@ -50,7 +50,7 @@
           class=" h-fit rounded-full object-cover object-center">
           </div>
           <div class="font-semibold">An Bình</div>
-          <a href="tel:0936294605" class="text-green-600 font-medium hover:underline">0936 294 605</a>
+          <a href="tel:0936294605" class="text-green-600 font-medium hover:underline">0936 294 603</a>
         </div>
         <!-- Card 4 -->
         <div class="bg-gray-100 rounded p-2 w-40 text-center flex flex-col items-center">
@@ -60,7 +60,7 @@
           class=" h-fit rounded-full object-cover object-center">
           </div>
           <div class="font-semibold">Trọng Tín</div>
-          <a href="tel:0936294606" class="text-green-600 font-medium hover:underline">0936 294 606</a>
+          <a href="tel:0936294606" class="text-green-600 font-medium hover:underline">0936 294 604</a>
         </div>
       </div>
     </div>
@@ -74,15 +74,15 @@
         <li>Hình thức thanh toán</li>
       </ul>
       <div class="mt-8 w-full flex flex-col items-center">
-        <p class="font-semibold text-center mb-2">HỢP TÁC & GÓP Ý DỊCH VỤ</p>
+        <!-- <p class="font-semibold text-center mb-2">HỢP TÁC & GÓP Ý DỊCH VỤ</p> -->
         <div class="flex flex-col items-center gap-2">
-          <div class="bg-gray-100 rounded p-2 w-44 text-center">
-            <div class="font-semibold">Mr. Trọng Trí</div>
-            <a href="tel:0912345678" class="text-green-600 font-medium hover:underline">0912 345 678</a>
+          <div class=" rounded p-2 w-44 text-center">
+            <!-- <div class="font-semibold">Mr. Trọng Trí</div>
+            <a href="tel:0912345678" class="text-green-600 font-medium hover:underline">0912 345 678</a> -->
           </div>
-          <div class="bg-gray-100 rounded p-2 w-44 text-center">
-            <div class="font-semibold">Ms. Hà</div>
-            <a href="tel:0987654321" class="text-green-600 font-medium hover:underline">0987 654 321</a>
+          <div class=" rounded p-2 w-44 text-center">
+            <!-- <div class="font-semibold">Ms. Hà</div>
+            <a href="tel:0987654321" class="text-green-600 font-medium hover:underline">0987 654 321</a> -->
           </div>
         </div>
       </div>
@@ -90,6 +90,7 @@
 
     <!-- Cột 4: Liên hệ + Địa chỉ + Google Maps -->
     <div class="space-y-3 flex flex-col items-start">
+      <p class="font-semibold text-center mb-2">THÔNG TIN LIÊN HỆ</p>
       <!-- Phone -->
       <div class="flex items-center space-x-2">
         <img src="{% static 'icons/phone-icon.png' %}" alt="Phone" class="w-5 h-5">
@@ -122,7 +123,7 @@
   </div>
 
   <!-- Footer note -->
-  <div class="text-center text-1xl font-semibold text-gray-500 mt-4 px-4 py-2 border-t border-gray-200">
+  <div class="text-center text-1xl font-semibold text-gray-700 mt-4 px-4 py-2 border-t border-gray-200">
     CHÚNG TÔI QUAN TÂM KHÁCH HÀNG - XỬ LÝ TỐT THÔNG TIN - CHÚ Ý CHẤT LƯỢNG SẢN PHẨM
   </div>
 </footer>
